--- a/control/templates/control/index.html
+++ b/control/templates/control/index.html
@@ -1,11 +1,23 @@
 <html>
   {% load static %}
   <head>
-    <link href="{% static 'control/css.css' %}" rel="stylesheet"></link>
-  <script src="{% static 'control/js.js' %}"></script>
+  <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="{% static 'control/css.css' %}" rel="stylesheet"/>
+    <script src="{% static 'control/js.js' %}"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
   <style>
     body {
+    {% if options.background %}
       background-image: url("{{options.background.url}}");
+    {% else %}
+        background-image: url("{% static 'control/defaultbg.jpg' %}");
+    {% endif %}
       background-repeat: no-repeat;
       width: 100%;
       height: 100%;
@@ -13,17 +25,59 @@
       border: 0;
       padding: 0;
     }
-
   </style>
   <head>
     <body>
-      {{user.username}}
-      {% for app in apps %}
-      <a class="app" href="/{{app.name}}">
-        <img class="icono" src="{{app.icono.url}}" alt="{{app.name}}" height="140px"/>
-        {{app.name}}
-      </a>
-      {% endfor %}
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#">{{user.username}}</a>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+              <ul class="nav navbar-nav">
+                  {% for app in apps %}
+                       <li><a href="/{{app.name}}">{{app.name}}</a></li>
+                  {% endfor %}
+              </ul>
+            </div><!--/.nav-collapse -->
+          </div>
+        </nav>
+        <div class="container" style="margin-top: 100px">
+            <div style="margin: auto; max-width: 600px;">
+            <div class="row">
+                {% for app in apps %}
+                    <div class="col-xs-4 text-center" style="margin-top: 20px">
+                        <a href="/{{app.name}}" class="special-button">
+                          <span class="special-button-table">
+                            <span class="special-button-cell">
+                                 <img class="icono" src="{{app.icono.url}}" alt="{{app.name}}" height="80px" width="80px"/>
+                            </span>
+                          </span>
+                        </a>
+                         <h4 style="color: white" >{{app.name}}</h4>
+                        {% comment %}<a style="text-decoration: none" class="app" href="/{{app.name}}">
+                            <img class="icono" src="{{app.icono.url}}" alt="{{app.name}}" height="80px" width="80px"/>
+                            <br>
+                            <h4 style="color: white" >{{app.name}}</h4>
+                        </a>{% endcomment %}
+
+
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+        </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
     </body>
 
     </html>
