--- a/control/templates/control/index.html
+++ b/control/templates/control/index.html
@@ -20,11 +20,42 @@
     {% endif %}
       background-repeat: no-repeat;
       width: 100%;
-      height: 100%;
       margin: 0;
       border: 0;
       padding: 0;
     }
+
+.special-button {
+  display: inline-block;
+  height: 100px;
+  width: 100px;
+  overflow: hidden;
+  position: relative;
+  color: #333;
+  text-decoration: none;
+  border-radius: 15px;
+}
+.special-button:hover {
+  background: rgba(43, 51, 8, 1);
+  color: #fff;
+}
+.special-button-table {
+  display: table;
+  width: 100%;
+  height: 100%;
+}
+.special-button-cell {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  padding: 10px;
+}
+
+  .navbar-inverse {
+        background-color: rgba(34, 34, 34, 0.42);
+        border-color: rgba(8, 8, 8, 0.36);
+        background-image: linear-gradient(to bottom,rgba(60, 60, 60, 0) 0,rgba(34, 34, 34, 0) 100%);
+}
   </style>
   <head>
     <body>
@@ -53,7 +84,7 @@
             <div class="row">
                 {% for app in apps %}
                     <div class="col-xs-4 text-center" style="margin-top: 20px">
-                        <a href="/{{app.name}}" class="special-button">
+                        <a href="/{{app.name}}" class="special-button" style="background: -moz-linear-gradient({{ app.background_color }}, rgba(34, 34, 34, 0.12)); background: linear-gradient({{ app.background_color }}, rgba(34, 34, 34, 0.12));">
                           <span class="special-button-table">
                             <span class="special-button-cell">
                                  <img class="icono" src="{{app.icono.url}}" alt="{{app.name}}" height="80px" width="80px"/>
