--- a/control/templates/control/index.html
+++ b/control/templates/control/index.html
@@ -57,8 +57,8 @@
         background-image: linear-gradient(to bottom,rgba(60, 60, 60, 0) 0,rgba(34, 34, 34, 0) 100%);
 }
   </style>
-  <head>
-    <body>
+  </head>
+    <body onload="startTime()">
         <nav class="navbar navbar-inverse navbar-fixed-top">
           <div class="container">
             <div class="navbar-header">
@@ -68,15 +68,34 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">{{user.username}}</a>
+              <a class="navbar-brand" href="#">
+              <small>
+                  {% if user.first_name %}
+                      {{user.first_name}} {{user.last_name}}
+                  {% else %}
+                    {{user.username}}
+                  {% endif %}</small>
+              </a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
               <ul class="nav navbar-nav">
-                  {% for app in apps %}
+                  {% comment %}{% for app in apps %}
                        <li><a href="/{{app.name}}">{{app.name}}</a></li>
-                  {% endfor %}
+                  {% endfor %}{% endcomment %}
               </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                     aria-expanded="false"><span id="txt"></span> <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li>
+                        <div></div>
+                    </li>
+                  </ul>
+                </li>
+            </ul>
             </div><!--/.nav-collapse -->
+
           </div>
         </nav>
         <div class="container" style="margin-top: 100px">
@@ -108,7 +127,29 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script>
+        function startTime() {
+            var today = new Date();
+            var h = today.getHours();
+            var m = today.getMinutes();
+            var s = today.getSeconds();
+            var tod =" AM ";
+            m = checkTime(m);
+            s = checkTime(s);
+            if(h>=12){
+                h-=12;
+                tod =" PM ";
+            }
 
+            document.getElementById('txt').innerHTML =
+            h +":" + m + ":" + s + tod;
+            var t = setTimeout(startTime, 500);
+        }
+        function checkTime(i) {
+            if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
+            return i;
+        }
+    </script>
     </body>
 
     </html>
