--- a/control/templates/control/index.html
+++ b/control/templates/control/index.html
@@ -88,9 +88,8 @@
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                      aria-expanded="false"><span id="txt"></span> <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li>
-                        <div></div>
-                    </li>
+                      <li><a href="#">Cambiar Fondo</a></li>
+                      <li><a href="#">Cerrar Sesion</a></li>
                   </ul>
                 </li>
             </ul>
