--- a/inblensa/templates/inventario/productos.html
+++ b/inblensa/templates/inventario/productos.html
@@ -184,7 +184,14 @@
                 var userList = new List('productos', options);
 
                 $(".imagezoom").elevateZoom(
-                        {constrainType:"height", constrainSize:274, zoomType: "lens", containLensZoom: true, gallery:'gallery_01', cursor: 'pointer', galleryActiveClass: "active"}
+                        {constrainType:"height",
+                            scrollZoom : true,
+                            constrainSize:274,
+                            zoomType: "lens",
+                            containLensZoom: true,
+                            gallery:'gallery_01',
+                            cursor: 'pointer',
+                            galleryActiveClass: "active"}
                 );
             }
         });
