--- a/arca/templates/arca/index.html
+++ b/arca/templates/arca/index.html
@@ -11,52 +11,6 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-  <style>
-    body {
-    {% if options.background %}
-      background-image: url("{{options.background.url}}");
-    {% else %}
-        background-image: url("{% static 'control/defaultbg.jpg' %}");
-    {% endif %}
-      background-repeat: no-repeat;
-      width: 100%;
-      margin: 0;
-      border: 0;
-      padding: 0;
-    }
-
-.special-button {
-  display: inline-block;
-  height: 100px;
-  width: 100px;
-  overflow: hidden;
-  position: relative;
-  color: #333;
-  text-decoration: none;
-  border-radius: 15px;
-}
-.special-button:hover {
-  background: rgba(43, 51, 8, 1);
-  color: #fff;
-}
-.special-button-table {
-  display: table;
-  width: 100%;
-  height: 100%;
-}
-.special-button-cell {
-  display: table-cell;
-  vertical-align: middle;
-  text-align: center;
-  padding: 10px;
-}
-
-  .navbar-inverse {
-        background-color: rgba(34, 34, 34, 0.42);
-        border-color: rgba(8, 8, 8, 0.36);
-        background-image: linear-gradient(to bottom,rgba(60, 60, 60, 0) 0,rgba(34, 34, 34, 0) 100%);
-}
-  </style>
   </head>
     <body onload="startTime()">
         <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -74,14 +28,13 @@
                       {{user.first_name}} {{user.last_name}}
                   {% else %}
                     {{user.username}}
-                  {% endif %}</small>
+                  {% endif %}
+              </small>
               </a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
               <ul class="nav navbar-nav">
-                  {% comment %}{% for app in apps %}
-                       <li><a href="/{{app.name}}">{{app.name}}</a></li>
-                  {% endfor %}{% endcomment %}
+                  <li><a href="/{{app.name}}" class="go_back">Regresar</a></li>
               </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
@@ -97,23 +50,12 @@
 
           </div>
         </nav>
-        <div class="container" style="margin-top: 100px">
-            <div style="margin: auto; max-width: 600px;">
+        <div class="container" style="margin-top: 50px">
             <div class="row">
-                {% for app in apps %}
-                    <div class="col-xs-4 text-center" style="margin-top: 20px">
-                        <a href="/{{app.name}}" class="special-button" style="background: -moz-linear-gradient({{ app.background_color }}, rgba(34, 34, 34, 0.12)); background: linear-gradient({{ app.background_color }}, rgba(34, 34, 34, 0.12));">
-                          <span class="special-button-table">
-                            <span class="special-button-cell">
-                                 <img class="icono" src="{{app.icono.url}}" alt="{{app.name}}" height="80px" width="80px"/>
-                            </span>
-                          </span>
-                        </a>
-                         <h4 style="color: white" >{{app.name}}</h4>
-                    </div>
-                {% endfor %}
+                 <div class="col-xs-12 text-center">
+                    <img src="/static/enconstruccion.png" class="img-responsive" style="margin: auto">
+                 </div>
             </div>
-        </div>
         </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -141,6 +83,12 @@
             if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
             return i;
         }
+        $(document).ready(function (){
+            $(".go_back").on("click",function (e) {
+                history.back();
+                e.preventDefault();
+            });
+        });
     </script>
     </body>
 
