--- a/arca/templates/arca/index.html
+++ b/arca/templates/arca/index.html
@@ -53,7 +53,7 @@
         <div class="container" style="margin-top: 50px">
             <div class="row">
                  <div class="col-xs-12 text-center">
-                    <img src="{% static  "/enconstruccion.png" %}" class="img-responsive" style="margin: auto">
+                    <img src="{% static  "arca/enconstruccion.png" %}" class="img-responsive" style="margin: auto">
                  </div>
             </div>
         </div>
