--- a/arca/templates/arca/index.html
+++ b/arca/templates/arca/index.html
@@ -72,8 +72,8 @@
 
 <div class="col-md-5" >
 <a href="levanto un modal pidiendo la cuenta si no la tiene el navegador"><img src="fb.png" />Ingresa con FaceBook</a><br/>
-<a href="levanto un modal pidiendo la cuenta si no la tiene el navegador"><img src="tw.png" />Ingresa con Twiter</a><br/>
-<a href="levanto un modal pidiendo la cuenta si no la tiene el navegador"><img src="gplus.png" />Ingresa con Google +</a>
+<a href=""><img src="tw.png" />Ingresa con Twiter</a><br/>
+<a href="{% url 'social:begin' "google-oauth2" %}"><img src="gplus.png" />Ingresa con Google +</a>
 </div>
 
     <div class="col-md-7" style="border-left:1px solid #ccc;height:160px">
