--- a/arca/templates/arca/_descuento.html
+++ b/arca/templates/arca/_descuento.html
@@ -24,26 +24,47 @@
     </div>
 
     {% if descuento.comercio.tiene_descuento_vigencia %}
-         <div class="innerWrapper clearfix row" style="margin-left: inherit !important; padding: inherit !important; ">
+         <div class="innerWrapper clearfix row" style="margin-left: inherit !important; padding: 0 !important; ">
             <div class="alert alert-success fade in">
-              <strong>Segmentacion de vigencia:</strong>
+              <strong>
+                  <label class="align-right">
+                    <input type="checkbox" name="ckvigencia" id="ckvigencia"
+                        {% if descuento.desc_dia_vigencia%}
+                            checked="checked    "
+                        {% endif %}
+                    > Segmentacion de vigencia:
+                  </label>
+              </strong>
                 Permite segmentar el porcentaje de descuento que usted desea otorgar basado en una fecha de vigencia
             </div>
             <div class="form-group col-sm-4 col-xs-12">
                 <label for="">Vigencia (días)</label>
-                <input type="number" min="1" max="100" class="form-control" id="vigencia" name="vigencia" required="required"
-                        value="{{ descuento.vigencia|default_if_none:3 }}">
+                <input type="number" min="1" max="100" class="form-control" id="vigencia_param" name="vigencia_param"
+                        value="{{ descuento.desc_dia_vigencia|default_if_none:'' }}"
+                        {% if not descuento.desc_dia_vigencia%}
+                            disabled="disabled"
+                        {% endif %}
+                >
             </div>
             <div class="form-group col-sm-4 col-xs-12">
                 <label for="">% Antes</label>
-                <input type="number" min="1" max="100" class="form-control" id="vigencia" name="vigencia" required="required"
-                        value="{{ descuento.desc_dia_vigencia_porc_inf|default_if_none:1 }}">
+                <input type="number" min="1" max="100" class="form-control" id="vigencia_porc_inf" name="vigencia_porc_inf"
+                        value="{{ descuento.desc_dia_vigencia_porc_inf|default_if_none:'' }}"
+                        {% if not descuento.desc_dia_vigencia%}
+                            disabled="disabled"
+                        {% endif %}
+                >
             </div>
             <div class="form-group col-sm-4 col-xs-12">
                 <label for="">% Despues</label>
-                <input type="number" min="1" max="100" class="form-control" id="vigencia" name="vigencia" required="required"
-                        value="{{ descuento.desc_dia_vigencia_porc_sup|default_if_none:10 }}">
+                <input type="number" min="1" max="100" class="form-control" id="vigencia_porc_sup" name="vigencia_porc_sup"
+                        value="{{ descuento.desc_dia_vigencia_porc_sup|default_if_none:'' }}"
+                        {% if not descuento.desc_dia_vigencia%}
+                            disabled="disabled"
+                        {% endif %}
+                >
             </div>
+
          </div>
     {% else %}
         <div class="alert alert-success fade in">
@@ -53,6 +74,47 @@
         </div>
     {% endif %}
     {% if descuento.comercio.tiene_descuento_compra_minima %}
+        <div class="innerWrapper clearfix row" style="margin-left: inherit !important; padding: 0 !important; ">
+            <div class="alert alert-success fade in">
+              <strong>
+                  <label class="align-right">
+                    <input type="checkbox" name="ckcompraminima" id="ckcompraminima"
+                        {% if descuento.desc_compra_minima%}
+                            checked="checked    "
+                        {% endif %}
+                    > Segmentacion por compra minima:
+                  </label>
+            </strong>
+            Permite segmentar el porcentaje de descuento que usted desea otorgar si el cliente realiza una compra minima
+            </div>
+            <div class="form-group col-sm-4 col-xs-12">
+                <label for="">Compra min.$</label>
+                <input type="number" min="1" max="100" class="form-control" id="compra_min_param" name="compra_min_param"
+                        value="{{ descuento.desc_compra_minima|default_if_none:'' }}"
+                        {% if not descuento.desc_compra_minima%}
+                            disabled="disabled"
+                        {% endif %}
+                    >
+            </div>
+            <div class="form-group col-sm-4 col-xs-12">
+                <label for="">% Menor</label>
+                <input type="number" min="1" max="100" class="form-control" id="compra_minima_porc_inf" name="compra_minima_porc_inf"
+                        value="{{ descuento.desc_compra_minima_porc_inf|default_if_none:'' }}"
+                        {% if not descuento.desc_compra_minima%}
+                            disabled="disabled"
+                        {% endif %}
+                        >
+            </div>
+            <div class="form-group col-sm-4 col-xs-12">
+                <label for="">% Mayor</label>
+                <input type="number" min="1" max="100" class="form-control" id="compra_minima_porc_sup" name="compra_minima_porc_sup"
+                        value="{{ descuento.desc_compra_minima_porc_sup|default_if_none:'' }}"
+                        {% if not descuento.desc_compra_minima%}
+                            disabled="disabled"
+                        {% endif %}
+                >
+            </div>
+         </div>
     {% else %}
         <div class="alert alert-success fade in">
           <strong>Segmentacion por compra minima:</strong>
