--- a/arca/templates/arca/_descuentos.html
+++ b/arca/templates/arca/_descuentos.html
@@ -11,15 +11,15 @@
       <tbody>
         {% for descuento in descuentos %}
         <tr>
-          <td >{{ descuento.nombre }}</td>
+          <td ><a href="{% url 'render_descuento' %}?id={{ descuento.id }}" class="modal-triguer">{{ descuento.nombre }}</a></td>
           <td>{{ descuento.nombre }}</td>
           <td>{{ descuento.creado }}</td>
           <td>
             <div class="checkboxArea">
                 {% if descuento.activo %}
-                    <input id="checkbox1" type="checkbox" name="checkbox" value="1" checked="checked">
+                    <input id="checkbox1" type="checkbox" name="checkbox" value="1" checked="checked" disabled="disabled">
                 {% else %}
-                    <input id="checkbox1" type="checkbox" name="checkbox" value="1" >
+                    <input id="checkbox1" type="checkbox" name="checkbox" value="1" disabled="disabled">
                 {% endif %}
               <label for="checkbox1"><span></span></label>
             </div>
