--- a/arca/templates/arca/base2.html
+++ b/arca/templates/arca/base2.html
@@ -27,7 +27,9 @@
     <link rel="stylesheet" href="/static/options/animate.css">
     <link rel="stylesheet" href="/static/options/optionswitch.css">
     <link rel="stylesheet" href="/static/css/colors/default.css" id="option_color">
+    {% block style-block %}
 
+    {% endblock style-block %}
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -135,7 +137,7 @@
                   <a href="{% url 'mi_comercio' %}" role="button">Mi Empresa</a>
                 </li>
                 {% endif %}
-                <li class="dropdown megaDropMenu">
+                {% comment %}<li class="dropdown megaDropMenu">
                   <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="300" data-close-others="true" aria-expanded="false">Shop</b></a>
                   <ul class="dropdown-menu row">
                     <li class="col-sm-3 col-xs-12">
@@ -198,7 +200,7 @@
                     <li><a href="blog-single-right-sidebar.html">Single Right Sidebar</a></li>
                     <li><a href="blog-single-left-sidebar.html">Single Left Sidebar</a></li>
                   </ul>
-                </li>
+                </li>{% endcomment %}
                 <li class="dropdown active">
                   <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Mi Cuenta</a>
                   <ul class="dropdown-menu dropdown-menu-right">
