--- a/arca/templates/arca/_cupon.html
+++ b/arca/templates/arca/_cupon.html
@@ -22,7 +22,7 @@
             </select>
         </div>
 
-    <button class="btn btn-primary btn-block" style="width: 100%" onclick="guardarDescuento()">Validar<i class="fa fa-check fa-fw"></i></button>
+    <button class="btn btn-primary btn-block" style="width: 100%" onclick="guardarCupon()">Validar<i class="fa fa-check fa-fw"></i></button>
 
 
 </div>
