--- a/arca/templates/arca/mi_empresa.html
+++ b/arca/templates/arca/mi_empresa.html
@@ -2,250 +2,285 @@
 
 {% block page-tible %}COMERCIO{% endblock %}
 {% block style-block%}
-    <style>
-    a {
-        color: #337ab7;
-    }
-    a:hover,a:focus {
-        color: #337ab7;
-    }
-    </style>
+<style>
+  a {
+    color: #337ab7;
+  }
+  a:hover,a:focus {
+    color: #337ab7;
+  }
+</style>
 {% endblock %}
 {% block breadcrumb %}
 <li><a href="{% url 'arca_index' %}">Inicio</a></li>
 <li class="active">Mi Comercio</li>
 {% endblock %}
 {% block main-content %}
-    {% include "arca/_empresa.html" %}
-    <div class="row">
-      <div class="col-xs-12 commentsForm">
-        <div class="tabCommon">
-          <ul class="nav nav-tabs">
-              <li class="active"><a data-toggle="tab" href="#menu1" aria-expanded="true">Descuentos</a></li>
-              <li class=""><a data-toggle="tab" href="#menu2" aria-expanded="false">Cupones expedidos</a></li>
-              <li class=""><a data-toggle="tab" href="#menu3" aria-expanded="false">Mis productos</a></li>
-          </ul>
-          <div class="tab-bottom">
+{% include "arca/_empresa.html" %}
+<div class="row">
+  <div class="col-xs-12 commentsForm">
+    <div class="tabCommon">
+      <ul class="nav nav-tabs">
+        <li class="active"><a data-toggle="tab" href="#menu1" aria-expanded="true">Descuentos</a></li>
+        <li class=""><a data-toggle="tab" href="#menu2" aria-expanded="false">Cupones expedidos</a></li>
+        <li class=""><a data-toggle="tab" href="#menu3" aria-expanded="false">Mis productos</a></li>
+      </ul>
+      <div class="tab-bottom">
+      </div>
+      <div class="tab-content">
+        <div id="menu1" class="tab-pane fade  active in">
+          <button id="btnDescuento" class="btn btn-primary">Nuevo <i class="fa fa-plus"></i></button>
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="orderBox" id="content-listado-descuento">
+
+              </div>
+            </div>
           </div>
-          <div class="tab-content">
-            <div id="menu1" class="tab-pane fade  active in">
-                <button id="btnDescuento" class="btn btn-primary">Nuevo <i class="fa fa-plus"></i></button>
-                <div class="row">
-                <div class="col-xs-12">
-                    <div class="orderBox" id="content-listado-descuento">
 
-                    </div>
-                  </div>
-              </div>
-
-            </div>
-            <div id="menu2" class="tab-pane fade">
-                <button id="btnCupon" class="btn btn-primary">Nuevo <i class="fa fa-plus"></i></button>
-                <div class="row">
-                <div class="col-xs-12">
-                    <div class="orderBox" id="content-listado-cupones">
-                    </div>
-                  </div>
-              </div>
-            </div>
-            <div id="menu3" class="tab-pane fade">
-              <div class="row">
-                <div class="col-xs-12">
-                    <div class="orderBox">
-                      <div class="table-responsive">
-                        <table class="table">
-                          <thead>
-                            <tr>
-                              <th>Carrier</th>
-                              <th>Method</th>
-                              <th>Information</th>
-                              <th>Price</th>
-                              <th></th>
-                            </tr>
-                          </thead>
-                          <tbody>
-                            <tr>
-                              <td class="col-xs-1"><i class="fa fa-plane" aria-hidden="true"></i></td>
-                              <td>by Air</td>
-                              <td>Delivery next day!</td>
-                              <td>$ 99.00</td>
-                              <td>
-                                <div class="checkboxArea">
-                                  <input id="checkbox1" type="checkbox" name="checkbox" value="1" checked="checked">
-                                  <label for="checkbox1"><span></span></label>
-                                </div>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td class="col-xs-1"><i class="fa fa-ship" aria-hidden="true"></i></td>
-                              <td>by Ship</td>
-                              <td>Pick up in-store</td>
-                              <td>$ 39.00</td>
-                              <td>
-                                <div class="checkboxArea">
-                                  <input id="checkbox2" type="checkbox" name="checkbox" value="1">
-                                  <label for="checkbox2"><span></span></label>
-                                </div>
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
-                      </div>
-                    </div>
-                  </div>
+        </div>
+        <div id="menu2" class="tab-pane fade">
+          <button id="btnCupon" class="btn btn-primary">Nuevo <i class="fa fa-plus"></i></button>
+          <select id="filtro_canjeado">
+            <option value="todos">Todos</option>
+            <option value="True">Canjeados</option>
+            <option value="False">No Canjeados</option>
+          </select>
+          <select id="filtro_empleado">
+            <option value="todos">Todos</option>
+            {% for e in empleados %}
+            <option value="{{e.usuario.id}}">{{e.usuario}}</option>
+            {% endfor %}
+          </select>
+          <div>
+            <input id="fecha_inicial" type="text" placeholder="Fecha Inicial">
+            <input id="fecha_final" type="text" placeholder="Fecha Final">
+          </div>
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="orderBox" id="content-listado-cupones">
               </div>
             </div>
           </div>
         </div>
-
-        <!-- LOGIN MODAL -->
-        <div class="modal fade login-modal" id="signup" tabindex="-1" role="dialog">
-          <div class="modal-dialog">
-            <div class="modal-content">
-                <div id="conten-modal"></div>
+        <div id="menu3" class="tab-pane fade">
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="orderBox">
+                <div class="table-responsive">
+                  <table class="table">
+                    <thead>
+                      <tr>
+                        <th>Carrier</th>
+                        <th>Method</th>
+                        <th>Information</th>
+                        <th>Price</th>
+                        <th></th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td class="col-xs-1"><i class="fa fa-plane" aria-hidden="true"></i></td>
+                        <td>by Air</td>
+                        <td>Delivery next day!</td>
+                        <td>$ 99.00</td>
+                        <td>
+                          <div class="checkboxArea">
+                            <input id="checkbox1" type="checkbox" name="checkbox" value="1" checked="checked">
+                            <label for="checkbox1"><span></span></label>
+                          </div>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td class="col-xs-1"><i class="fa fa-ship" aria-hidden="true"></i></td>
+                        <td>by Ship</td>
+                        <td>Pick up in-store</td>
+                        <td>$ 39.00</td>
+                        <td>
+                          <div class="checkboxArea">
+                            <input id="checkbox2" type="checkbox" name="checkbox" value="1">
+                            <label for="checkbox2"><span></span></label>
+                          </div>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
 
+    <!-- LOGIN MODAL -->
+    <div class="modal fade login-modal" id="signup" tabindex="-1" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div id="conten-modal"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 {% endblock %}
 
 
 {% block script-block %}
 <script>
-$(document).ready(function () {
+  $(document).ready(function () {
     $.ajaxSetup({ cache: false });
     $("#btnDescuento").on('click',function () {
-        nuevoDescuento();
+      nuevoDescuento();
     });
     $("#btnCupon").on('click',function () {
-        nuevoCupon();
+      nuevoCupon();
     });
     mostrarDescuentos();
     mostrarCupones();
-});
+    $('#filtro_canjeado').on('change', mostrarCupones);
+    $('#filtro_empleado').on('change', mostrarCupones);
+    $('#fecha_inicial').on('change', mostrarCupones);
+    $('#fecha_final').on('change', mostrarCupones);
+  });
 
-function init_modal_descuento_triguers() {
+  function init_modal_descuento_triguers() {
     $(".modal-triguer").on("click", function (e) {
-        $('#conten-modal').load(this.href, function () {
-            $('#signup').modal({
-                backdrop: 'static',
-                keyboard: true
-            }, 'show');
-            $("#ckvigencia").on('change', function () {
-                $("#vigencia_param").prop('disabled', !$(this).is(":checked"));
-                $("#vigencia_porc_inf").prop('disabled', !$(this).is(":checked"));
-                $("#vigencia_porc_sup").prop('disabled', !$(this).is(":checked"));
-                if($(this).is(":checked"))
-                        $("#vigencia_param").focus();
-            });
-            $("#ckcompraminima").on('change', function () {
-                $("#compra_min_param").prop('disabled', !$(this).is(":checked"));
-                $("#compra_minima_porc_inf").prop('disabled', !$(this).is(":checked"));
-                $("#compra_minima_porc_sup").prop('disabled', !$(this).is(":checked"));
-                if($(this).is(":checked"))
-                        $("#compra_min_param").focus();
-            });
+      $('#conten-modal').load(this.href, function () {
+        $('#signup').modal({
+          backdrop: 'static',
+          keyboard: true
+        }, 'show');
+        $("#ckvigencia").on('change', function () {
+          $("#vigencia_param").prop('disabled', !$(this).is(":checked"));
+          $("#vigencia_porc_inf").prop('disabled', !$(this).is(":checked"));
+          $("#vigencia_porc_sup").prop('disabled', !$(this).is(":checked"));
+          if($(this).is(":checked"))
+            $("#vigencia_param").focus();
         });
-        return false;
+        $("#ckcompraminima").on('change', function () {
+          $("#compra_min_param").prop('disabled', !$(this).is(":checked"));
+          $("#compra_minima_porc_inf").prop('disabled', !$(this).is(":checked"));
+          $("#compra_minima_porc_sup").prop('disabled', !$(this).is(":checked"));
+          if($(this).is(":checked"))
+            $("#compra_min_param").focus();
+        });
+      });
+      return false;
     });
 
-}
+  }
 
 
 
-function nuevoDescuento() {
+  function nuevoDescuento() {
     $.ajax({
-        url:"{% url 'render_descuento' %}",
-        type:"GET",
-        success: function (result) {
-            $("#conten-modal").empty().html(result);
-            $("#signup").modal({
-              backdrop: 'static',
-              keyboard: false
-            });
-        }
+      url:"{% url 'render_descuento' %}",
+      type:"GET",
+      success: function (result) {
+        $("#conten-modal").empty().html(result);
+        $("#signup").modal({
+          backdrop: 'static',
+          keyboard: false
+        });
+      }
     });
-}
-function mostrarDescuentos() {
+  }
+  function mostrarDescuentos() {
     $.ajax({
-        url:"{% url 'render_listado_descuento' %}",
-        type:"GET",
-        success:function (result) {
-            $("#content-listado-descuento").empty().html(result);
-            init_modal_descuento_triguers();
-        }
+      url:"{% url 'render_listado_descuento' %}",
+      type:"GET",
+      success:function (result) {
+        $("#content-listado-descuento").empty().html(result);
+        init_modal_descuento_triguers();
+      }
     });
-}
-function guardarDescuento() {
+  }
+  function guardarDescuento() {
     var data =$('#conten-modal :input').serialize();
 
     $.ajax({
-        url:"{% url 'save_descuento' %}",
-        type:"post",
-        data:data,
-        success: function (result) {
-            var data=result[0];
-            if(data.code==200){
-                $("#signup").modal('hide');
-                mostrarDescuentos();
-            }else {
-                swal({
-                    title: "Upss.. ha ocurrido un inconveniente",
-                    text: data.mensaje,
-                    type: "warning"
-                });
-            }
+      url:"{% url 'save_descuento' %}",
+      type:"post",
+      data:data,
+      success: function (result) {
+        var data=result[0];
+        if(data.code==200){
+          $("#signup").modal('hide');
+          mostrarDescuentos();
+        }else {
+          swal({
+            title: "Upss.. ha ocurrido un inconveniente",
+            text: data.mensaje,
+            type: "warning"
+          });
         }
+      }
     });
-}
+  }
 
-function mostrarCupones() {
+  function mostrarCupones() {
+    var filtros = {};
+    var canjeado = $('#filtro_canjeado').val();
+    var empleado = $('#filtro_empleado').val();
+    var finicial = $('#fecha_inicial').val();
+    var ffinal = $('#fecha_final').val();
+    if (canjeado == "True" || canjeado == "False") {
+      filtros['canjeado'] = canjeado;
+    }
+    if (empleado != "todos"){
+      filtros['creado_por'] = empleado;
+    }
+    if (finicial != "" && ffinal != ""){
+      filtros['creado__gte'] = finicial;
+      filtros['creado__lte'] = ffinal;
+    }
     $.ajax({
-        url:"{% url 'render_listado_cupones' %}",
-        type:"GET",
-        success:function (result) {
-            $("#content-listado-cupones").empty().html(result);
-            //init_modal_descuento_triguers();
-        }
+      url:"{% url 'render_listado_cupones' %}",
+      type:"GET",
+      data: filtros,
+      success:function (result) {
+        $("#content-listado-cupones").empty().html(result);
+        //init_modal_descuento_triguers();
+      }
     });
-}
-function nuevoCupon() {
+  }
+  function nuevoCupon() {
     $.ajax({
-        url:"{% url 'render_cupon' %}",
-        type:"GET",
-        success: function (result) {
-            $("#conten-modal").empty().html(result);
-            $("#signup").modal({
-              backdrop: 'static',
-              keyboard: false
-            });
-        }
+      url:"{% url 'render_cupon' %}",
+      type:"GET",
+      success: function (result) {
+        $("#conten-modal").empty().html(result);
+        $("#signup").modal({
+          backdrop: 'static',
+          keyboard: false
+        });
+      }
     });
-}
-function guardarCupon() {
+  }
+  function guardarCupon() {
     var data =$('#conten-modal :input').serialize();
 
     $.ajax({
-        url:"{% url 'save_cupon' %}",
-        type:"post",
-        data:data,
-        success: function (result) {
-            var data=result[0];
-            if(data.code==200){
-                $("#signup").modal('hide');
-                mostrarCupones();
-            }else {
-                swal({
-                    title: "Upss.. ha ocurrido un inconveniente",
-                    text: data.mensaje,
-                    type: "warning"
-                });
-            }
+      url:"{% url 'save_cupon' %}",
+      type:"post",
+      data:data,
+      success: function (result) {
+        var data=result[0];
+        if(data.code==200){
+          $("#signup").modal('hide');
+          mostrarCupones();
+        }else {
+          swal({
+            title: "Upss.. ha ocurrido un inconveniente",
+            text: data.mensaje,
+            type: "warning"
+          });
         }
+      }
     });
-}
+  }
 
 </script>
 
