--- a/arca/templates/arca/account_profile.html
+++ b/arca/templates/arca/account_profile.html
@@ -29,7 +29,7 @@
             <div class="row">
               <div class="col-md-2 col-sm-3 col-xs-12">
                 <div class="thumbnail">
-                  <img src="{{ user.profile.imagen_url }}" alt="profile-image">
+                  <img src="{{ user.perfil.imagen_url }}" alt="profile-image">
                   {% comment %}<div class="caption">
                     <a href="#" class="btn btn-primary btn-block" role="button">Change Avatar</a>
                   </div>{% endcomment %}
@@ -59,7 +59,7 @@
                     <div class="form-group">
                       <label for="" class="col-md-2 col-sm-3 control-label">Movil</label>
                       <div class="col-md-10 col-sm-9">
-                        <input type="text" class="form-control" id="telefono" name="telefono" placeholder="" value="{{ user.profile.telefono }}">
+                        <input type="text" class="form-control" id="telefono" name="telefono" placeholder="" value="{{ user.perfil.telefono }}">
                       </div>
                     </div>
                     <div class="form-group">
