--- a/arca/templates/arca/base2.html
+++ b/arca/templates/arca/base2.html
@@ -132,7 +132,7 @@
                 <li class="dropdown">
                   <a href="{% url 'arca_index' %}" role="button">Inicio</a>
                 </li>
-                {% if user.profile.comercio %}
+                {% if user.perfil.comercio %}
                 <li class="dropdown ">
                   <a href="{% url 'mi_comercio' %}" role="button">Mi Empresa</a>
                 </li>
