--- a/arca/templates/arca/base1.html
+++ b/arca/templates/arca/base1.html
@@ -270,7 +270,7 @@
                 <li class="dropdown active">
                   <a href="{% url 'arca_index' %}" role="button">Inicio</a>
                 </li>
-                {% if user.profile.comercio %}
+                {% if user.perfil.comercio %}
                 <li class="dropdown ">
                   <a href="{% url 'mi_comercio' %}" role="button">Mi Empresa</a>
                 </li>
@@ -876,7 +876,7 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-2 col-xs-12">
-              <div class="footerLink">
+              {% comment %}<div class="footerLink">
                 <h5>Accessories</h5>
                 <ul class="list-unstyled">
                   <li><a href="#">Body care </a></li>
@@ -886,56 +886,22 @@
                   <li><a href="#">Shaving </a></li>
                   <li><a href="#">Toilette </a></li>
                 </ul>
-              </div>
+              </div>{% endcomment %}
             </div>
             <div class="col-sm-2 col-xs-12">
-              <div class="footerLink">
-                <h5>BRANDS</h5>
-                <ul class="list-unstyled">
-                  <li><a href="#">Barbour </a></li>
-                  <li><a href="#">Brioni </a></li>
-                  <li><a href="#">Oliver Spencer</a></li>
-                  <li><a href="#">Belstaff</a></li>
-                </ul>
-              </div>
             </div>
             <div class="col-sm-2 col-xs-12">
-              <div class="footerLink">
-                <h5>Accessories</h5>
-                <ul class="list-unstyled">
-                  <li><a href="#">Body care </a></li>
-                  <li><a href="#">Chambray </a></li>
-                  <li><a href="#">Floral </a></li>
-                  <li><a href="#">Rejuvination </a></li>
-                  <li><a href="#">Shaving </a></li>
-                  <li><a href="#">Toilette </a></li>
-                </ul>
-              </div>
             </div>
             <div class="col-sm-2 col-xs-12">
-              <div class="footerLink">
-                <h5>Get in Touch</h5>
-                <ul class="list-unstyled">
-                  <li>Call us at (555)-555-5555</li>
-                  <li><a href="mailto:support@iamabdus.com">support@iamabdus.com</a></li>
-                </ul>
-                <ul class="list-inline">
-                  <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                  <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                  <li><a href="#"><i class="fa fa-vimeo"></i></a></li>
-                  <li><a href="#"><i class="fa fa-tumblr"></i></a></li>
-                </ul>
-              </div>
             </div>
             <div class="col-sm-4 col-xs-12">
               <div class="newsletter clearfix">
-                <h4>Newsletter</h4>
-                <h3>Sign up now</h3>
-                <p>Enter your email address and get notified about new products. We hate spam!</p>
+                <h4>Programa de Afiliación</h4>
+                <h3>Rigistra tu comercio Ahora!</h3>
+                <p>Empieza a gozar de los beneficios de nuestro servicio de afilición de clientes</p>
                 <div class="input-group">
-                  <input type="text" class="form-control" placeholder="your email address" aria-describedby="basic-addon2">
-                  <a href="#" class="input-group-addon" id="basic-addon2">go <i class="glyphicon glyphicon-chevron-right"></i></a>
+                  {% comment %}<input type="text" class="form-control" placeholder="your email address" aria-describedby="basic-addon2">{% endcomment %}
+                  <a href="#" class="input-group-addon" style="width: 100% !important;" id="basic-addon2">Ingresar<i class="glyphicon glyphicon-chevron-right"></i></a>
                 </div>
               </div>  
             </div>
