registro de comercio actualizado

--- a/arca/templates/arca/base1.html
+++ b/arca/templates/arca/base1.html
@@ -901,7 +901,7 @@
                 <p>Empieza a gozar de los beneficios de nuestro servicio de afilición de clientes</p>
                 <div class="input-group">
                   {% comment %}<input type="text" class="form-control" placeholder="your email address" aria-describedby="basic-addon2">{% endcomment %}
-                  <a href="#" class="input-group-addon" style="width: 100% !important;" id="basic-addon2">Ingresar<i class="glyphicon glyphicon-chevron-right"></i></a>
+                  <a href="{% url 'arca_login_comercio' %}" class="input-group-addon" style="width: 100% !important;" id="basic-addon2">Ingresar<i class="glyphicon glyphicon-chevron-right"></i></a>
                 </div>
               </div>  
             </div>
