--- a/arca/templates/arca/comercio/registrar_negocio_st4.html
+++ b/arca/templates/arca/comercio/registrar_negocio_st4.html
@@ -32,12 +32,11 @@
           <div class="col-xs-3 progress-wizard-step active">
             <div class="text-center progress-wizard-stepnum">Confirmacion</div>
             <div class="progress"><div class="progress-bar"></div></div>
-            <a href="checkout-step-3.html" class="progress-wizard-dot"></a>
+            <a href="{% url 'registrar_negocio_st4' %}" class="progress-wizard-dot"></a>
           </div>
 
         </div>
-
-        <form id="form-wizar" action="{% url 'registrar_negocio_st4' %}" class="row" method="post" role="form">
+        <form id="form-wizar" action="{% url 'registrar_negocio' %}" class="row" method="post" role="form">
             {% csrf_token %}
           <div class="col-xs-12">
             <div class="page-header">
@@ -51,14 +50,29 @@
               </div>
               <div class="panel-body">
                 <address>
-                  <strong>Nombre</strong><br>
+                  <strong style="font-weight: bold !important;">Nombre</strong><br>
                   {{ request.session.nombre_empresa }}<br>
-                  <strong>Identificacion</strong><br>
+                  <strong style="font-weight: bold !important;">Identificacion</strong><br>
                   {{ request.session.identificacion_empresa }}<br>
-                  <strong>Dirección</strong><br>
-                  {{ request.session.identificacion_empresa }}<br>
-                  <strong>Teléfono</strong><br>
-                  {{ request.session.telefono_empresa }}<br>
+                  <strong style="font-weight: bold !important;">Dirección</strong><br>
+                  {{ request.session.direccion_empresa }}<br>
+                  <strong style="font-weight: bold !important;">Teléfono</strong><br>
+                  +505 {{ request.session.telefono_empresa }}<br>
+                </address>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-xs-12">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">Datos para el imgreso</h4>
+              </div>
+              <div class="panel-body">
+                <address>
+                  <strong style="font-weight: bold !important;">Nombre</strong><br>
+                  {{ request.session.usuario_nombre }} {{ request.session.usuario_apellido }}<br>
+                  <strong style="font-weight: bold !important;">Email</strong><br>
+                  {{ request.session.usuario_email }}<br>
                 </address>
               </div>
             </div>
@@ -67,7 +81,7 @@
             <div class="well well-lg clearfix">
               <ul class="pager">
                 <li class="previous"><a href="#" >Regresar</a></li>
-                <li class="next"><a href="javascript:submit_form()">Continuar</a></li>
+                <li class="next"><a href="javascript:submit_form()">Completar</a></li>
               </ul>
             </div>
           </div>
